Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjTextRetTextObj.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, Text> yoda
        Text ret = yoda:useForce(one, two)
        output "passed"
     end
end
