Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextRetNumObjFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
